--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ a{
 }
 nav{
     align-items: center;
-    background-color: #99caab;
+    background-color: #b3e0c6;
     padding-top: 20px;
+    width: 100%;
 }
 #navbar{
     text-align: center;
@@ -38,19 +39,20 @@ nav.sticky{
     align-items: center;
     text-align: center;
 }
+
 .btn{
-    background-color: darkgreen;
+    width: 400px;
+    background-color: #1e6550;
     color: #fff;
-    width: 500px;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     font-weight: bold;
-    padding: 8px 15px;
+    padding: 18px 25px;
     border-radius: 3px;
     transition: transform .4s;
     cursor: pointer;
 }
 .btn:hover{
-    background-color: lightgreen;
+    background-color: #99caab;
     transform: scale(1.2);
 }
 .content{
@@ -58,7 +60,7 @@ nav.sticky{
     text-align: center;
     margin-top: 8%;
     padding: 0.4em;
-    color: rgb(98, 170, 98);
+    color: #1e6550;
     line-height: 45px;
     font-size: 26px;
     animation: slide-up 2s ease;
@@ -163,7 +165,7 @@ nav.sticky{
     height: 250px;
     width: 335px;
     padding: 25px 40px;
-    background: #f8f7f7;
+    background: #f5f5f5;
     border-radius: 10px;
     margin: 60px;
     overflow: hidden;
@@ -200,7 +202,7 @@ nav.sticky{
 
 @media all and (max-width: 912px) {
     .top-off{
-        margin-left: 350px;
+        margin-left: 300px;
         font-size: 35px;
     }
     .box{
@@ -248,6 +250,16 @@ nav.sticky{
     }
 }
 
+@media screen and (device-width: 480px) and (device-height: 800px) {
+    .card{
+        margin-left: 100px;
+        width: 250px;
+    }
+    .pra p{
+        font-size: 15px;
+    }
+}
+
 
 @media all and (max-width: 414px){
     .card{
@@ -285,7 +297,7 @@ nav.sticky{
 
 .about{
     width: 100%;
-    background-color: #72aa8b;
+    background-color: #cfe8cc;
     padding: 30px;
 }
 .main{
@@ -360,7 +372,7 @@ nav.sticky{
 }
 .main h1{
     margin-top: -70px;
-    color: darkgreen;
+    color: #1e6550;
     font-size: 40px;
     letter-spacing: 8px;
     margin-left: 0;
@@ -484,6 +496,12 @@ nav.sticky{
     }
 }
 
+@media screen and (device-width: 480px) and (device-height: 800px){
+    .images{
+        width: 478px;
+    }
+}
+
 @media all and (max-width: 414px){
     .images{
         width: 412px;
@@ -576,7 +594,7 @@ nav.sticky{
     height: 90vh;
 }
 .contact h1{
-    color: darkgreen;
+    color: #035946;
     letter-spacing: 4px;
     font-size: 30px;
     font-weight: 700;
@@ -586,7 +604,7 @@ nav.sticky{
 }
 
 .input-field{
-    background-color: rgb(3, 97, 58);
+    background-color: #035946;
     margin-top: 5%;
     margin-left: 21%;
     padding-top: 50px;
@@ -627,8 +645,8 @@ form ::placeholder{
     font-weight: 600;
 }
 .form-btn{
-    width: 120px;
-    background-color: #1e6550;
+    width: 200px;
+    background-color: #cfe8cc;
     color: #fff;
     border: none;
     margin: 10px 0;
@@ -716,6 +734,12 @@ form ::placeholder{
 @media all and (max-width: 540px){
     .input-field{
         width: 539px;
+    }
+}
+
+@media screen and (device-width: 480px) and (device-height: 800px) {
+    .input-field{
+        width: 480px;
     }
 }
 
