--- a/htcode.css
+++ b/htcode.css
@@ -30,7 +30,7 @@ body{
     padding-block: 0.6rem;
     text-align: center;
     margin-bottom: 2rem;
-    position: sticky;
+    position: fixed;
     overflow: hidden;
     top: 0;
     margin-inline: auto; 
